# nemo-qml-plugin-calendar

./: .gitignore  CMakeLists.txt
lightweight/: CMakeLists.txt
lightweight/calendardataservice/: CMakeLists.txt  calendardataservice.cpp  calendardataservice.h  calendardataservice.pro
lightweight/calendareventsmodel/: CMakeLists.txt  calendareventsmodel.cpp  calendareventsmodel.h  calendareventsmodel.pro  plugin.cpp  plugins.qmltypes
lightweight/common/: eventdata.cpp  eventdata.h
rpm/: nemo-qml-plugin-calendar-qt5.spec
src/: CMakeLists.txt  calendaragendamodel.cpp  calendaragendamodel.h  calendarapi.cpp  calendarapi.h  calendarattendeemodel.cpp  calendarattendeemodel.h  calendarchangeinformation.cpp  calendarchangeinformation.h  calendarcontactmodel.cpp  calendarcontactmodel.h  calendardata.h  calendarevent.cpp  calendarevent.h  calendareventlistmodel.cpp  calendareventlistmodel.h  calendareventmodification.cpp  calendareventmodification.h  calendareventoccurrence.cpp  calendareventoccurrence.h  calendareventquery.cpp  calendareventquery.h  calendarimportevent.cpp  calendarimportevent.h  calendarimportmodel.cpp  calendarimportmodel.h  calendarinvitationquery.cpp  calendarinvitationquery.h  calendarmanager.cpp  calendarmanager.h  calendarnotebookmodel.cpp  calendarnotebookmodel.h  calendarnotebookquery.cpp  calendarnotebookquery.h  calendarsearchmodel.cpp  calendarsearchmodel.h  calendarutils.cpp  calendarutils.h  calendarworker.cpp  calendarworker.h  (+3 more)
tests/: CMakeLists.txt  common.pri  tests.pro  tests.xml
tests/tst_calendaragendamodel/: CMakeLists.txt  tst_calendaragendamodel.cpp  tst_calendaragendamodel.pro
tests/tst_calendarevent/: CMakeLists.txt  test_plugin_interface.h  tst_calendarevent.cpp  tst_calendarevent.pro  tst_calendareventbin.pro
tests/tst_calendarevent/test_plugin/: CMakeLists.txt  test_plugin.cpp  test_plugin.h  test_plugin.pro
tests/tst_calendarimportmodel/: tst_calendarimportmodel.cpp  tst_calendarimportmodel.pro
tests/tst_calendarmanager/: CMakeLists.txt  tst_calendarmanager.cpp
tests/tst_calendarsearchmodel/: tst_calendarsearchmodel.cpp  tst_calendarsearchmodel.pro
tools/: CMakeLists.txt
tools/icalconverter/: CMakeLists.txt  icalconverter.pro  main.cpp
